# class-14-lynn-and-knight

./: README.md
factorial/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  factorial.c
hello/: .gitignore  Makefile  Makefile.am  build.sh  configure.ac  factorial.c  hello.c  hello.h
linear_algebra/: .gitignore  CMakeLists.txt  hello_openmp.c  linear_algebra.h  matrix_matrix_mul.c  matrix_vector_mul.c  test_average.c  test_average_basic.c  test_average_fortran.F90  test_data_layout.c  test_integrate.c  test_matrix_vector_mul.c
openmp/: .gitignore  CMakeLists.txt  average.c  average_cell_centers.c  cells.h  integration.c
